# AP_01

./: .gitignore  AP_01.code-workspace  CMAKE_MIGRATION_SUMMARY.md  HelperPosePlot.m  IKS02A1_Full.slx  IKS02A1_Full.slxc  IKS02A1_Full_Orient.slx  IKS02A1_LP_Accel.slx  IKS02A1_LP_Accel.slxc  IKS02A1_Mic.slx  IKS02A1_Mic.slxc  IKS02A1_VL53L1A1_Both.slx  IKS02A1_VL53L1A1_Both.slxc  IKS02A1_VL53L8A1_Both.slx  IMU_6DOF.slx  Magnetometer.slx  OrientationExample.slx  README.md  STM32_Nucleo_DataDumping.slx  STM32_Nucleo_Programming.elf  STM32_Nucleo_Programming.hex  STM32_Nucleo_Programming.slx  STM32_Nucleo_Programming.slx.autosave  STM32_Nucleo_Programming.slx.original  STM32_Nucleo_Programming.slxc  Time_of_Flight.slx  VL53L1A1_Full.slx  VL53L1A1_Full.slxc  VL53L8A1_Full.slx  VL53L8A1_Full.slxc
NucleoMX/: .cproject  .mxproject  .project  Makefile  NucleoMX.ioc  NucleoMX.ioctmp  script
NucleoMX/Core/Inc/: CustomDump.h  main.h  stm32f4xx_it.h
NucleoMX/Core/Src/: CustomDump.c  gpio.c  main.c  stm32f4xx_it.c  usart.c
NucleoMX/STM32CubeIDE/: .cproject  .project
NucleoMX_IKS02A1/: OrientationEstimationAHRSFilterAndIMUDataInSimulinkExample.m  PreProcessor.m  STM32Nucleo_IKS02A1.slx  STM32Nucleo_IKS02A1.slx.autosave
NucleoMX_IKS02A1/Source Code/: .mxproject  NucleoMX_IKS02A1.ioc  STM32Make.make  script
NucleoMX_IKS02A1/Source Code/STM32CubeIDE/: .cproject  .project
NucleoMX_IKS02A1/slprj/_jitprj/: Q1SHW6Bx6dDLnFWUQ3awy.l  Q1SHW6Bx6dDLnFWUQ3awy.mat  jitEngineAccessInfo.mat
NucleoMX_VL53L1A1/: STM32Nucleo_VL53L1A1.slx
NucleoMX_VL53L1A1/Source Code/: .cproject  .mxproject  Makefile  NucleoMX_VL53L1A1.ioc  STM32-for-VSCode.config.yaml  STM32Make.make
NucleoMX_VL53L1A1/Source Code/STM32CubeIDE/: .project
NucleoMX_VL53L8A1/: .mxproject  NucleoMX_VL53L8A1.ioc  STM32Make.make  STM32Nucleo_VL53L8A1.slx  STM32Nucleo_VL53L8A1.slxc
NucleoMX_VL53L8A1/Core/Inc/: main.h  stm32f4xx_it.h
NucleoMX_VL53L8A1/Core/Src/: main.c
NucleoMX_VL53L8A1/STM32CubeIDE/: .cproject
NucleoMX_VL53L8A1/Source Code/: .mxproject  .project.bak  Makefile  NucleoMX_VL53L8A1.ioc  STM32Make.make
NucleoMX_VL53L8A1/TOF/App/: app_tof.c
STM32_Nucleo_Programming_ert_rtw/: BufferedSerial.dep  CustomDump.dep  MW_GetPeripheralObjects.dep  MW_I2C.dep  MW_digitalIO.dep  MW_target_hardware_resources.h  STM32_Nucleo_Programming.bat  STM32_Nucleo_Programming.c  STM32_Nucleo_Programming.dep  STM32_Nucleo_Programming.h  STM32_Nucleo_Programming.map  STM32_Nucleo_Programming.mk  STM32_Nucleo_Programming.rsp  STM32_Nucleo_Programming_comp.rsp  STM32_Nucleo_Programming_data.c  STM32_Nucleo_Programming_data.dep  STM32_Nucleo_Programming_private.h  STM32_Nucleo_Programming_types.h  SysTickScheduler.dep  buildInfo.mat  codeInfo.mat  codedescriptor.dmr  codertarget_assembly_flags.mk  ert_main.c  ert_main.dep  extmode_task_info.m  m3m4m4f_multitasking.dep  main.dep  mw_mbed_interface.dep  overrideHALDelay.dep  rtiostream_serial_mbed.dep  rtmodel.h  rtw_proj.tmw  rtwtypes.h  rtwtypeschksum.mat  stm_timer_ll.dep  sys_arch.dep  tim.dep  usart.dep  vl53l0x_api.dep  (+22 more)
STM32_Nucleo_Programming_ert_rtw/tmwinternal/: simulink_cache.xml  tr
STM32_Nucleo_Programming_ert_rtw/xcp/: addr_table.json
driver installation/: readme.md
slprj/_cgxe/IKS02A1_Full/: IKS02A1_Full_Cache.mat
slprj/_cgxe/IKS02A1_LP_Accel/: IKS02A1_LP_Accel_Cache.mat
slprj/_cgxe/IKS02A1_VL53L1A1_Both/: IKS02A1_VL53L1A1_Both_Cache.mat
slprj/_cgxe/STM32L4_Nucleo_IKS02A1_Dump/: STM32L4_Nucleo_IKS02A1_Dump_Cache.mat
slprj/_cgxe/STM32_Nucleo_DataDumping/: STM32_Nucleo_DataDumping_Cache.mat
slprj/_cgxe/STM32_Nucleo_IKS02A1_Dump/: STM32_Nucleo_IKS02A1_Dump_Cache.mat
slprj/_jitprj/: AwTZ961hymj2mhkS5nqvEC.mat  CKlazMO7TmZf327Lvp8M4F.mat  jitEngineAccessInfo.mat  usroSu4ZkM3bpmk1qo2b1F.l  usroSu4ZkM3bpmk1qo2b1F.mat  wnMIC1FnBIRmWmUDmdP1DD.l  wnMIC1FnBIRmWmUDmdP1DD.mat
slprj/accel/IKS02A1_Full/: IKS02A1_Full_SolverChangeInfo.mat  IKS02A1_Full_instrumentation_settings.mat  IKS02A1_Full_top_vm.bc  amsi_serial.mat
slprj/accel/IKS02A1_LP_Accel/: IKS02A1_LP_Accel_SolverChangeInfo.mat  IKS02A1_LP_Accel_instrumentation_settings.mat  IKS02A1_LP_Accel_top_vm.bc  amsi_serial.mat
slprj/accel/IKS02A1_Mic/: IKS02A1_Mic_SolverChangeInfo.mat  amsi_serial.mat  (+2 more)
src/: auto_COMPORT.asv  auto_COMPORT.m  auto_program.asv  auto_program.m  auto_program_linux.m  auto_program_mac.m  auto_program_win.asv  auto_program_win.m  iks02a1_error.m  unpack_ToF.slx
src/IKS02A1 Source Code Full/: .cproject  .mxproject  .project  CMakeLists.txt  CMakePresets.json  Makefile  NucleoMX_IKS02A1.ioc  STM32Make.make
src/IKS02A1 Source Code LP Accel/: .mxproject  CMakeLists.txt  CMakePresets.json  NucleoMX_IKS02A1.ioc
src/IKS02A1 Source Code Mic/: .mxproject  Makefile  NucleoMX_IKS02A1.ioc  README.md  STM32-for-VSCode.config.yaml  STM32Make.make
src/IKS02A1 VL53L1A1 Source Code Both/: .mxproject  CMakeLists.txt  CMakePresets.json  Makefile  NucleoMX_IKS02A1_VL53L1.ioc  STM32-for-VSCode.config.yaml  STM32Make.make  arm-toolchain.cmake
src/IKS02A1 VL53L1A1 Source Code Both/Core/Inc/: RTE_Components.h  VL53L1A1_Simulink.h  X-NUCLEO-53L1A1.h  main.h  stm32f4xx_it.h  stm32f4xx_nucleo_bus.h
src/IKS02A1 VL53L1A1 Source Code Both/Core/Src/: IKS02A1_Simulink.c  VL53L1A1_Simulink.c  X-NUCLEO-53L1A1.c  main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c  stm32f4xx_nucleo_bus.c
src/IKS02A1 VL53L8A1 Source Code Both/: .mxproject  CMakeLists.txt  CMakePresets.json  Makefile  NucleoMX_VL53L8A1.ioc  STM32-for-VSCode.config.yaml  STM32Make.make  arm-toolchain.cmake
src/Plotting/: DistanceVisualizer.m  IMPLEMENTATION_SUMMARY.md  INDEX.md  OrientationPlot.m  PCMPlot.m  QUICKSTART.md  README.md  UART_Protocol_Reference.md  VCP_Parser_Analysis.md  VISUAL_GUIDE.md  requirements.txt  vcp_data_parser.py  vcp_data_parser_test.py
src/VL53L1A1 Source Code Full/: .mxproject  .project  CMakeLists.txt  CMakePresets.json  Makefile  NucleoMX_VL53L1A1.ioc  STM32Make.make  script
src/VL53L8A1 Source Code Full/: .cproject.bak  .mxproject  CMakeLists.txt  CMakePresets.json  Makefile  NucleoMX_VL53L8A1.ioc  STM32Make.make
(+165 files in other folders)
